sections 2 & 3 + fixed contact bar (not embeded)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,55 @@
       <div id="me-photo">
         <div id="me-grdt">
         </div>
-        <img src="media/me_photo.jpeg" alt="portrait picture of me, just standing there">
+        <img src="media/me-tied.jpg" alt="portrait picture of me, just standing there">
+      </div>
+      <div class="details">
+        <p>Peppers large ricotta ricotta pesto lot.
+          Pizza marinara ricotta meatball extra steak Hawaiian crust pizza.
+          Beef bell peppers stuffed anchovies green lasagna garlic pork.
+          Bianca style olives chicken onions black red Chicago.
+          Mouth cheese spinach beef personal sauce.
+        </p>
+        <p>Meatball cheese ricotta ranch ranch.
+          Sautéed lot wing Chicago white garlic.
+          Meat sauce pork buffalo roll melted spinach pesto meatball roll.
+          Philly green large Bianca melted anchovies Philly tossed chicken.
+          Rib wing banana pepperoni and peppers.
+        </p>
+        <p>
+          Thin personal bacon sautéed extra lovers lot banana pesto.
+          Style and pan bell buffalo meatball string dolor pesto bell.
+          Pie fresh pork ricotta pork bacon burnt anchovies.
+          Lot cheese white pineapple pan Chicago mushrooms beef pineapple pizza.
+        </p>
+      </div>
+
+    </section>
+    <footer id="footer">
+      <div>
+        <p>Oscar Cardenas</p>
+        <p>07925769332</p>
+        <p>oscrdns@gmail.com</p>
+      </div>
+      <div id="social">
+        <svg width="48" height="48" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd" d="M12.5 0.75C6.14625 0.75 1 5.89625 1 12.25C1 17.3387 4.29187 21.6369 8.86312 23.1606C9.43812 23.2612 9.65375 22.9162 9.65375 22.6144C9.65375 22.3412 9.63938 21.4356 9.63938 20.4725C6.75 21.0044 6.0025 19.7681 5.7725 19.1212C5.64313 18.7906 5.0825 17.77 4.59375 17.4969C4.19125 17.2812 3.61625 16.7494 4.57938 16.735C5.485 16.7206 6.13188 17.5687 6.3475 17.9137C7.3825 19.6531 9.03563 19.1644 9.69688 18.8625C9.7975 18.115 10.0994 17.6119 10.43 17.3244C7.87125 17.0369 5.1975 16.045 5.1975 11.6462C5.1975 10.3956 5.64312 9.36062 6.37625 8.55562C6.26125 8.26812 5.85875 7.08937 6.49125 5.50812C6.49125 5.50812 7.45438 5.20625 9.65375 6.68687C10.5738 6.42812 11.5513 6.29875 12.5288 6.29875C13.5063 6.29875 14.4838 6.42812 15.4038 6.68687C17.6031 5.19187 18.5662 5.50812 18.5662 5.50812C19.1987 7.08937 18.7962 8.26812 18.6812 8.55562C19.4144 9.36062 19.86 10.3812 19.86 11.6462C19.86 16.0594 17.1719 17.0369 14.6131 17.3244C15.03 17.6837 15.3894 18.3737 15.3894 19.4519C15.3894 20.99 15.375 22.2262 15.375 22.6144C15.375 22.9162 15.5906 23.2756 16.1656 23.1606C20.7081 21.6369 24 17.3244 24 12.25C24 5.89625 18.8538 0.75 12.5 0.75Z" fill="#24292F"/>
+        </svg>
+        <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_1_119)">
+          <path d="M44.4469 0H3.54375C1.58437 0 0 1.54688 0 3.45938V44.5312C0 46.4437 1.58437 48 3.54375 48H44.4469C46.4062 48 48 46.4438 48 44.5406V3.45938C48 1.54688 46.4062 0 44.4469 0ZM14.2406 40.9031H7.11563V17.9906H14.2406V40.9031ZM10.6781 14.8688C8.39062 14.8688 6.54375 13.0219 6.54375 10.7437C6.54375 8.46562 8.39062 6.61875 10.6781 6.61875C12.9563 6.61875 14.8031 8.46562 14.8031 10.7437C14.8031 13.0125 12.9563 14.8688 10.6781 14.8688ZM40.9031 40.9031H33.7875V29.7656C33.7875 27.1125 33.7406 23.6906 30.0844 23.6906C26.3812 23.6906 25.8187 26.5875 25.8187 29.5781V40.9031H18.7125V17.9906H25.5375V21.1219H25.6312C26.5781 19.3219 28.9031 17.4188 32.3625 17.4188C39.5719 17.4188 40.9031 22.1625 40.9031 28.3313V40.9031Z" fill="black"/>
+          </g>
+          <defs>
+          <clipPath id="clip0_1_119">
+          <rect width="48" height="48" fill="white"/>
+          </clipPath>
+          </defs>
+        </svg>
+      </div>
+    </footer>
+    <section id="education" class="">
+      <div id="open-logo" class="">
+        <img src="media/open.png" alt="The Open university">
       </div>
       <div class="details">
         <p>Peppers large ricotta ricotta pesto lot.
@@ -34,42 +82,53 @@
       </div>
     </section>
 
-    <section id="education" class="">
-      <div id="open-logo" class="">
+    <section id="harvard-edx" class="portfolio">
+      <div class="portfolio-header">
+        <img src="media/harvard.png" alt="Harvard">
+        <img src="media/edx.png" alt="">
+      </div>
+      <div class="details">
+        <p>Peppers large ricotta ricotta pesto lot.
+          Pizza marinara ricotta meatball extra steak Hawaiian crust pizza.
+          Beef bell peppers stuffed anchovies green lasagna garlic pork.
+          Bianca style olives chicken onions black red Chicago.
+          Mouth cheese spinach beef personal sauce.
+        </p>
+        <p>Meatball cheese ricotta ranch ranch.
+          Sautéed lot wing Chicago white garlic.
+          Meat sauce pork buffalo roll melted spinach pesto meatball roll.
+          Philly green large Bianca melted anchovies Philly tossed chicken.
+          Rib wing banana pepperoni and peppers.
+        </p>
+        <p>
+          Thin personal bacon sautéed extra lovers lot banana pesto.
+          Style and pan bell buffalo meatball string dolor pesto bell.
+          Pie fresh pork ricotta pork bacon burnt anchovies.
+          Lot cheese white pineapple pan Chicago mushrooms beef pineapple pizza.
+        </p>
+      </div>
+      <div class="images">
+      </div>
+      <div class="tech-stack">
+        <img src="media/django.png" alt="">
+        <img src="media/python-logo.png" alt="">
+        <img src="media/html-css.png" alt="">
+        <img src="media/bootstrap.png" alt="">
+      </div>
+    </section>
+
+    <section id="bavi" class="">
+      <div class="portfolio-header">
       </div>
       <div class="details">
       </div>
-    </section>
-
-    <section id="portfolio" class="">
-      <div id="harvard-edx">
-        <div class="portfolio-header">
-        </div>
-        <div class="details">
-        </div>
-        <div class="images">
-        </div>
-        <div class="tech-stack">
-        </div>
+      <div class="images">
       </div>
-
-      <div id="bavi" class="">
-        <div class="portfolio-header">
-        </div>
-        <div class="details">
-        </div>
-        <div class="images">
-        </div>
-        <div class="tech-stack">
-        </div>
+      <div class="tech-stack">
       </div>
     </section>
 
-    <footer id="footer">
-      <div id="contact">
-      </div>
-      <div id="social">
-      </div>
-    </footer>
+
+
   </body>
 </html>
