--- a/index.html
+++ b/index.html
@@ -16,24 +16,11 @@
         <img src="media/me-tied.jpg" alt="portrait picture of me, just standing there">
       </div>
       <div class="details">
-        <p>Peppers large ricotta ricotta pesto lot.
-          Pizza marinara ricotta meatball extra steak Hawaiian crust pizza.
-          Beef bell peppers stuffed anchovies green lasagna garlic pork.
-          Bianca style olives chicken onions black red Chicago.
-          Mouth cheese spinach beef personal sauce.
-        </p>
-        <p>Meatball cheese ricotta ranch ranch.
-          Sautéed lot wing Chicago white garlic.
-          Meat sauce pork buffalo roll melted spinach pesto meatball roll.
-          Philly green large Bianca melted anchovies Philly tossed chicken.
-          Rib wing banana pepperoni and peppers.
-        </p>
-        <p>
-          Thin personal bacon sautéed extra lovers lot banana pesto.
-          Style and pan bell buffalo meatball string dolor pesto bell.
-          Pie fresh pork ricotta pork bacon burnt anchovies.
-          Lot cheese white pineapple pan Chicago mushrooms beef pineapple pizza.
-        </p>
+        <h1>Student in Software Engineering, Full Stack Web development enthusiast and AI curious ...</h1>
+        <p>...based in London and open to work, projects, collaborations and coffee.</p>
+        <p> Every problem has a solution, and a whole lot of times, it's a computer program.</p>
+        <p>Bringing a real curiosity for programming tools, emerging technologies
+          and the ocean of knowledge that the field of computer science offers, I thrive to solve problems creatively, leveraging the best that the computing community has to offer.</p>
       </div>
 
     </section>
@@ -68,24 +55,21 @@
         <img src="media/open.png" alt="The Open university">
       </div>
       <div class="details">
-        <p>Peppers large ricotta ricotta pesto lot.
-          Pizza marinara ricotta meatball extra steak Hawaiian crust pizza.
-          Beef bell peppers stuffed anchovies green lasagna garlic pork.
-          Bianca style olives chicken onions black red Chicago.
-          Mouth cheese spinach beef personal sauce.
-        </p>
-        <p>Meatball cheese ricotta ranch ranch.
-          Sautéed lot wing Chicago white garlic.
-          Meat sauce pork buffalo roll melted spinach pesto meatball roll.
-          Philly green large Bianca melted anchovies Philly tossed chicken.
-          Rib wing banana pepperoni and peppers.
+        <p>I am currently studying a part-time <strong>BSc Computing and It(Software)</strong> started in october 2020.</p>
+        <p>This course introduces its students to the whole computing landscape,
+          laying out important foundations to understand how different technologies
+          come together leveraging one another. It develops our understanding of what computers are,
+          their respective architectures, and gives us hands-on introductions to Operating Systems with Linux,
+          Networking with Cisco, Robotics with Python. We are taught to discuss and think about the future of computing
+          with the advances in Cloud computing, IoT, Machine learning, etc.
         </p>
         <p>
-          Thin personal bacon sautéed extra lovers lot banana pesto.
-          Style and pan bell buffalo meatball string dolor pesto bell.
-          Pie fresh pork ricotta pork bacon burnt anchovies.
-          Lot cheese white pineapple pan Chicago mushrooms beef pineapple pizza.
+          We are being taught, by brilliant tutors with extensive experience in programming,
+          Object Oriened Programming using Java, with all the terminology and constructs
+          that are common to Object Oriented programming languages.
         </p>
+        <p>As well as learning a language, we are taught data structures, algorithms and computability,
+          equipping us to define and solve common problems, thinking about complexity and writing tests for our code</p>
       </div>
     </section>
 
