Added commerce project description

--- a/index.html
+++ b/index.html
@@ -79,23 +79,38 @@
         <img src="media/edx.png" alt="">
       </div>
       <div class="details">
-        <p>Peppers large ricotta ricotta pesto lot.
-          Pizza marinara ricotta meatball extra steak Hawaiian crust pizza.
-          Beef bell peppers stuffed anchovies green lasagna garlic pork.
-          Bianca style olives chicken onions black red Chicago.
-          Mouth cheese spinach beef personal sauce.
+        <p>I recently completed the Commerce project
+           as a part of the Harvard CS50W 
+           (Web Programming with Python and JavaScript) 
+           course and it was an amazing experience. 
+           The project required me to build an auction web application 
+           that allows users to bid on items, manage their bids, comment
+           on items and that displayed the winner of an auction.
         </p>
-        <p>Meatball cheese ricotta ranch ranch.
-          Sautéed lot wing Chicago white garlic.
-          Meat sauce pork buffalo roll melted spinach pesto meatball roll.
-          Philly green large Bianca melted anchovies Philly tossed chicken.
-          Rib wing banana pepperoni and peppers.
+        <p>I built the application using Python and the Django web framework. 
+          I learned how to use Django to handle user requests and render templates, 
+          as well as how to connect to a database using the built-in ORM to store user 
+          and bid information.
         </p>
         <p>
-          Thin personal bacon sautéed extra lovers lot banana pesto.
-          Style and pan bell buffalo meatball string dolor pesto bell.
-          Pie fresh pork ricotta pork bacon burnt anchovies.
-          Lot cheese white pineapple pan Chicago mushrooms beef pineapple pizza.
+          One of the most challenging aspects of the project was uploading and rendering model images, 
+          as I had to make sure that the images were properly uploaded, resized and optimized for web use. 
+          But it was also one of the most rewarding, as I felt confident that the application 
+          was visually appealing.
+        </p>
+        <p>
+          Throughout the project, I had to work independently,
+           it was a bit challenging at the beginning but 
+           I learned how to manage my time and prioritize tasks.
+        </p>
+        <p>
+          Overall, the commerce project was an incredible learning 
+          experience that allowed me to apply the concepts 
+          I learned in the course to a real-world scenario. 
+          I feel confident in my ability to continue to learn 
+          and grow as a web developer, and I highly recommend 
+          this project to anyone interested in web development and 
+          specifically those who are keen to learn Django framework.
         </p>
       </div>
       <div class="images">
