--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <img src="media/me-tied.jpg" alt="portrait picture of me, just standing there">
       </div>
       <div class="details">
-        <h1>Student in Software Engineering, Full Stack Web development enthusiast and AI curious ...</h1>
-        <p>...based in London and open to work, projects, collaborations and coffee.</p>
-        <p> Every problem has a solution, and a whole lot of times, it's a computer program.</p>
-        <p>Bringing a real curiosity for programming tools, emerging technologies
-          and the ocean of knowledge that the field of computer science offers, I thrive to solve problems creatively, leveraging the best that the computing community has to offer.</p>
+        <h1>Passionate student of Software Engineering, Full Stack Web enthusiast, and AI explorer.</h1>
+        <p>London-based and open to work, projects, collaborations and coffee.</p>
+        <p>  Problem-solving through programming is my forte.</p>
+        <p>Thriving on emerging tech and the endless possibilities of computer science. 
+          Seeking exciting opportunities to apply my creativity and expertise. Let's connect and unleash innovation together.</p>
       </div>
 
     </section>
