--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <p>Oscar Cardenas</p>
         <p>07925769332</p>
         <p>oscrdns@gmail.com</p>
+        <p id="cv"><strong>Complete Resume</strong></p>
       </div>
       <div id="social">
         <a href="https://github.com/OscarCarde">
@@ -134,7 +135,12 @@
       <div class="tech-stack">
       </div>
     </section> --->
-
+    <div class="modal" id="pdfModal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <iframe id="pdfIframe" width="100%" height="800px" frameborder="0"></iframe>
+      </div>
+    </div>
 
 
   </body>
