--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oscar Cardenas</title>
     <link rel="stylesheet" href="master.css">
-    <script src="index.js"></script>
+    <script src="https://raw.githubusercontent.com/OscarCarde/oscarcarde.github.io/main/index.js"></script>
   </head>
   <body>
     <div id="top">
