--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Oscar Cardenas</title>
     <link rel="stylesheet" href="master.css">
     <script src="https://raw.githubusercontent.com/OscarCarde/oscarcarde.github.io/main/index.js"></script>
+    <script src="index.js"></script>
   </head>
   <body>
     <div id="top">
